deployments/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8s-monitoring-sample
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: k8s-monitoring-sample
    spec:
      containers:
        - name: k8s-monitoring-sample
          image: soichisumi0/k8s-monitoring-sample:v1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 3
