deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-monitoring-sample
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: k8s-monitoring-sample
