deployments/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-monitoring-sample
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: app.minikube
      http:
        paths:
          - path: /app(/|$)(.*)
            backend:
              serviceName: k8s-monitoring-sample
              servicePort: 8080
